@@ -44,6 +44,14 @@ class Session
 
     }
 
+    public function keyExists($key, $in = false){
+        if(isset($in))
+            $in = $_SESSION;
+        
+        if(!array_key_exists($key, $in))    
+            return false;
+    }
+    
     public function set($key, $value){
         $_SESSION[$key] = $value;
     }
